  - fix crash in vpasswd, vadduser, vadddomain for very long password
  - add an error code for too short passwords (minimum size = 12)
  - in vadddomain() : reject no TLD or invalid size TLD, or two consecutive '.'
  - change max size of user name and gecos to 64, and increase temporary buffer
    in make_vpasswd_cdb to fix a crash after changing the user name size

5.4.33 - Released 10-21-2012
  Matt Brookings
  - Defaulted to Server::Disable=True in vusagec.conf
  - Fixed bug that didn't install vusagec.conf
  - Changed relevant quota code to use storage_t 64bit type
  - Fixed bug where backfill code wouldn't compile when FILE_LOCKING was
    enabled
  - Updated MySQL module to support larger quota sizes
  - Fixed typo
  - Added disable_maildrop flag to MySQL limits feature
  - More changes to allow for larger quota sizes in MySQL module
  - Updated to signal_process to understand "runsv" as a supervise-type process manager

  Tullio Andreatta
  - Dynamic allocation of valias data
  - Use of open/fchdir rather than getcwd/chdir to maintain current working
    directory
  - Fixed a broken symbolic link check

  Drew Wells
  - Modification to vdelivermail to properly handle Maildir paths that begin with "./"

  <kenji@kens.fm>
  - Removed call to maildir_addquota inside user_over_maildirquota causing duplicate
    maildirsize entries

5.4.32 - Released 11-08-2010
  Matt Brookings
  - Updated maildirsize creation to set uid/gid on target
  - Updated maildirsize_read to enforce Maildir++ specifications related
    to maildirsize filesize and maildirsize modification time.
  - Fixed returning of 0 rather than NULL in client_connect
  - Updated vusage client API not to try to connect to the daemon if
    vusagec.conf does not exist
  - Fixed quota calculation bug when delivering with vusage daemon

  aledr <matrixworkstation@gmail.com>
  - Patch to secure against possible overflows when reading ezmlm configurations

  <alessio@skye.it>